--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 </head>
 <body>
 
-<header><h1>Albert Einstein</h1></header>
+<header class="einstein"><h1>Albert Einstein</h1></header>
 <nav><h3><a href="index.html">Einstein</a> | <a href="edison.html">Edison</a> | <a href="tesla.html">Tesla</a></h3></nav>
 <main>
-  <img src="einstein-pick-for-websiet .jpg" width="253" height="407" align="right">
 
  <p> Albert Einstein was a German-born theoretical physicist, widely acknowledged to be one of the greatest and most influential physicists of all time.</p> 
-  <h3>Inventions and Contributions</h3>
+  <h3>Inventions and Contributions<img src="einstein_c.png" width="253" align="right"></h3>
   <ul>
     <li>Avogadro's Number</li>
     <li>Quantum Theory of Light</li>
