--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header class="einstein"><h1>Albert Einstein</h1></header>
 <nav><h3><a href="index.html">Einstein</a> | <a href="edison.html">Edison</a> | <a href="tesla.html">Tesla</a></h3></nav>
 <main>
-
+ <div id="wrapper">
  <p> Albert Einstein was a German-born theoretical physicist, widely acknowledged to be one of the greatest and most influential physicists of all time.</p> 
   <h3>Inventions and Contributions<img src="einstein_c.png" width="253" align="right"></h3>
   <ul>
@@ -22,6 +22,7 @@
   </ul>
   <h3>Famous Quote</h3>
   <blockquote><i>Life is like a bicycle to keep your balance you must keep moving</i></blockquote>
+</div>   
 </main>
  <footer><br>&copy; 2022/ <strong> VS Wed Design</strong></footer>
 </body>
