--- a/edison.html
+++ b/edison.html
@@ -12,6 +12,7 @@
 <nav><h3><a href="index.html">Einstein</a> | <a href="edison.html">Edison</a> | <a href="tesla.html">Tesla</a></h3></nav>
 
 <main>
+ <div id="wrapper"> 
  <img src="Thomas-Edison-website-pic.avif"width="253" height="407" align="right">
 
  <p> Thomas Edison was an American inventor, born on 1847 in Milan Ohio. He held a world-record 1,093 patents. He also created the world's first industrial research laboratory. </p> 
@@ -24,6 +25,7 @@
   </ul>
   <h3>Famous Quote</h3>
   <blockquote><i> To invent, you need a good imagination and a pile of junk </i></blockquote>
+ </div>  
 </main>
 <footer><br>&copy; 2022/ <strong> VS Wed Design</strong>
 </body>
