--- a/tesla.html
+++ b/tesla.html
@@ -12,6 +12,7 @@
 <header class="tesla"><h1>Nikola Tesla</h1></header>
 <nav><h3><a href="index.html">Einstein</a> | <a href="edison.html">Edison</a> | <a href="tesla.html">Tesla</a></h3></nav>
 <main>
+ <div id="wrapper"> 
    <img src="Nikola-Tesla-.jpg" width="200" height="350" align="right">
  <p> Nikola Tesla was a Serbian-American engineer and physicist, born in 1856. made dozens of breakthrpughs in the production, transmission and application of electric power. </p> 
 
@@ -23,6 +24,7 @@
   </ul>
   <h3>Famous Quote</h3>
   <blockquote><i> I dont care that they stole my idea. I care that they don't have any of their own.</i></blockquote>
+ </div>  
 </main>
 <footer><br>&copy; 2022/ <strong> VS Wed Design</strong>
 </body>
