--- a/edison.html
+++ b/edison.html
@@ -13,14 +13,13 @@
 
 <main>
  <div id="wrapper"> 
- <img src="Thomas-Edison-website-pic.avif"width="253" height="407" align="right">
 
  <p> Thomas Edison was an American inventor, born on 1847 in Milan Ohio. He held a world-record 1,093 patents. He also created the world's first industrial research laboratory. </p> 
 
-  <h3>Inventions and Contributions</h3>
+  <h3>Inventions and Contributions<img src="edison_c.png" width="253" align="right"></h3>
   <ul>
     <li> Light bulb </li>
-    <li> Phonograph </li>"Thomas-Edison-website-pic.avif"
+    <li> Phonograph </li>
     <li> Kinetoscope </li>
   </ul>
   <h3>Famous Quote</h3>
