--- a/tesla.html
+++ b/tesla.html
@@ -13,10 +13,9 @@
 <nav><h3><a href="index.html">Einstein</a> | <a href="edison.html">Edison</a> | <a href="tesla.html">Tesla</a></h3></nav>
 <main>
  <div id="wrapper"> 
-   <img src="Nikola-Tesla-.jpg" width="200" height="350" align="right">
  <p> Nikola Tesla was a Serbian-American engineer and physicist, born in 1856. made dozens of breakthrpughs in the production, transmission and application of electric power. </p> 
 
-  <h3>Inventions and Contributions</h3>
+  <h3>Inventions and Contributions<img src="ntesla_c.png" width="253" align="right"></h3>
   <ul>
     <li> The First Alternating Current(AC) Motor</li>
     <li> Radio </li>
