--- a/edison.html
+++ b/edison.html
@@ -16,7 +16,7 @@
 
  <p> Thomas Edison was an American inventor, born on 1847 in Milan Ohio. He held a world-record 1,093 patents. He also created the world's first industrial research laboratory. </p> 
 
-  <h3>Inventions and Contributions<img src="edison_c.png" width="253" align="right"></h3>
+  <h3>Inventions and Contributions<img src="edison_c.png" width="253"></h3>
   <ul>
     <li> Light bulb </li>
     <li> Phonograph </li>
