--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <main>
  <div id="wrapper">
  <p> Albert Einstein was a German-born theoretical physicist, widely acknowledged to be one of the greatest and most influential physicists of all time.</p> 
-  <h3>Inventions and Contributions<img src="einstein_c.png" width="253" align="right"></h3>
+  <h3>Inventions and Contributions<img src="einstein_c.png" width="253"></h3>
   <ul>
     <li>Avogadro's Number</li>
     <li>Quantum Theory of Light</li>
