--- a/tesla.html
+++ b/tesla.html
@@ -15,7 +15,7 @@
  <div id="wrapper"> 
  <p> Nikola Tesla was a Serbian-American engineer and physicist, born in 1856. made dozens of breakthrpughs in the production, transmission and application of electric power. </p> 
 
-  <h3>Inventions and Contributions<img src="ntesla_c1.png" width="253" align="right"></h3>
+  <h3>Inventions and Contributions<img src="ntesla_c1.png" width="253"></h3>
   <ul>
     <li> The First Alternating Current(AC) Motor</li>
     <li> Radio </li>
