--- a/edison.html
+++ b/edison.html
@@ -24,7 +24,8 @@
   </ul>
   <h3>Famous Quote</h3>
   <blockquote><i> To invent, you need a good imagination and a pile of junk </i></blockquote>
- </div>  
+ </div> 
+   <p class="clear">&nbsp;</p>    
 </main>
 <footer><br>&copy; 2022/ <strong> VS Wed Design</strong>
 </body>
