--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </ul>
   <h3>Famous Quote</h3>
   <blockquote><i>Life is like a bicycle to keep your balance you must keep moving</i></blockquote>
+   <p class="clear">&nbsp;</p>     
 </div>   
 </main>
  <footer><br>&copy; 2022/ <strong> VS Wed Design</strong></footer>
