--- a/tesla.html
+++ b/tesla.html
@@ -23,7 +23,8 @@
   </ul>
   <h3>Famous Quote</h3>
   <blockquote><i> I dont care that they stole my idea. I care that they don't have any of their own.</i></blockquote>
- </div>  
+   <p class="clear">&nbsp;</p>     
+ </div> 
 </main>
 <footer><br>&copy; 2022/ <strong> VS Wed Design</strong>
 </body>
