--- a/edison.html
+++ b/edison.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title></title>
+<title>Inventors - Edison</title>
 <meta charset="utf-8">
 <link rel="icon" href="png-transparent-computer-icons-einstein-miscellaneous-orange-computer-wallpaper-removebg-preview.ico?" type="image/x-icon">  
  <link href="inventor.css"rel="stylesheet">
